--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -208,7 +208,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# brainstorming (rough plan what to do)\n",
+    "# brainstorming \n",
     "\n",
     "\n",
     "### Exploratory, basic preprocessing and questions to ask the dataset to get a feel of it.\n",
@@ -265,35 +265,6 @@
     "### Other (deploy etc)\n",
     ">- bash/make file to download the files\n",
     "- docker-compose thats adds the files and runs a proper notebook\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# main project rough plan\n",
-    "\n",
-    "#### goal:\n",
-    "Predict review rating (stars) by textual-content using pretrained GLOVE word embeddings+N layers deep LSTM network. Visualize (potencial clusters) on a 2D space using t-SNE.\n",
-    "\n",
-    "#### Steps:  \n",
-    "1) Process .text data from yelp review-documents\n",
-    "- filter to leave english-only reviews\n",
-    "- balance the dataset (use similar amount of data for each star rating (1,2,3,4,5*)\n",
-    "- balance the dataset by review length, so the length distribution of reviews for each rating-class is atleast similar (bucketing might be a good idea)\n",
-    "\n",
-    "2) Process text for deep-learning\n",
-    "- bring  GLOVE embeddings to a reasonable form\n",
-    "- Tokenize each review \n",
-    "- transform reviews into tokenized sequences\n",
-    "- Pad sequences to a fixed length\n",
-    "- Prepare the embedding weight-matrix to be used in the Embedding layer (we will not train this layer)\n",
-    "- split into test and train\n",
-    "\n",
-    "\n",
-    "3) Deep learning\n",
-    "- loss function, regression(rmse) or classification(logloss) big question\n",
-    "- prepare architecture (2-3 LSTM layers -> flatten -> fc)\n",
-    "- train, \n",
-    "\n",
     "\n"
    ]
   },
