--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -775,23 +775,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 202,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>F1_score</th>\n",
+       "      <th>support</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Classes</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.746079</td>\n",
+       "      <td>0.749391</td>\n",
+       "      <td>0.747732</td>\n",
+       "      <td>6983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.561604</td>\n",
+       "      <td>0.484683</td>\n",
+       "      <td>0.520316</td>\n",
+       "      <td>6790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.519072</td>\n",
+       "      <td>0.561362</td>\n",
+       "      <td>0.539389</td>\n",
+       "      <td>6812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.528064</td>\n",
+       "      <td>0.564902</td>\n",
+       "      <td>0.545862</td>\n",
+       "      <td>6895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.705729</td>\n",
+       "      <td>0.712793</td>\n",
+       "      <td>6912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>__avg / total__</th>\n",
+       "      <td>0.615746</td>\n",
+       "      <td>0.614125</td>\n",
+       "      <td>0.614074</td>\n",
+       "      <td>34392</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([1, 1, 3, ..., 4, 2, 3])"
+       "                precision    recall  F1_score support\n",
+       "Classes                                              \n",
+       "1                0.746079  0.749391  0.747732    6983\n",
+       "2                0.561604  0.484683  0.520316    6790\n",
+       "3                0.519072  0.561362  0.539389    6812\n",
+       "4                0.528064  0.564902  0.545862    6895\n",
+       "5                    0.72  0.705729  0.712793    6912\n",
+       "__avg / total__  0.615746  0.614125  0.614074   34392"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "cm.classification_report"
+   ]
   }
  ],
  "metadata": {
