--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -867,6 +867,17 @@
    "source": [
     "cm.classification_report"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model.summary"
+   ]
   }
  ],
  "metadata": {
