--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -870,13 +870,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "____________________________________________________________________________________________________\n",
+      "Layer (type)                     Output Shape          Param #     Connected to                     \n",
+      "====================================================================================================\n",
+      "embedding_3 (Embedding)          (None, 1000, 100)     0           embedding_input_9[0][0]          \n",
+      "____________________________________________________________________________________________________\n",
+      "gru_5 (GRU)                      (None, 1000, 100)     60300       embedding_3[0][0]                \n",
+      "____________________________________________________________________________________________________\n",
+      "dropout_5 (Dropout)              (None, 1000, 100)     0           gru_5[0][0]                      \n",
+      "____________________________________________________________________________________________________\n",
+      "gru_6 (GRU)                      (None, 100)           60300       dropout_5[0][0]                  \n",
+      "____________________________________________________________________________________________________\n",
+      "dropout_6 (Dropout)              (None, 100)           0           gru_6[0][0]                      \n",
+      "____________________________________________________________________________________________________\n",
+      "dense_3 (Dense)                  (None, 6)             606         dropout_6[0][0]                  \n",
+      "====================================================================================================\n",
+      "Total params: 121206\n",
+      "____________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
-    "model.summary"
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "____________________________________________________________________________________________________\n",
+    "Layer (type)                     Output Shape          Param #     Connected to                     \n",
+    "====================================================================================================\n",
+    "embedding_3 (Embedding)          (None, 1000, 100)     0           embedding_input_9[0][0]          \n",
+    "____________________________________________________________________________________________________\n",
+    "gru_5 (GRU)                      (None, 1000, 100)     60300       embedding_3[0][0]                \n",
+    "____________________________________________________________________________________________________\n",
+    "dropout_5 (Dropout)              (None, 1000, 100)     0           gru_5[0][0]                      \n",
+    "____________________________________________________________________________________________________\n",
+    "gru_6 (GRU)                      (None, 100)           60300       dropout_5[0][0]                  \n",
+    "____________________________________________________________________________________________________\n",
+    "dropout_6 (Dropout)              (None, 100)           0           gru_6[0][0]                      \n",
+    "____________________________________________________________________________________________________\n",
+    "dense_3 (Dense)                  (None, 6)             606         dropout_6[0][0]                  \n",
+    "====================================================================================================\n",
+    "Total params: 121206"
    ]
   }
  ],
